Add save button for beaker

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="archiveDoc">
     <head>
         <meta charset="utf-8">
         <title>A Simple Page with CKEditor</title>
@@ -16,6 +16,9 @@
       <button id="editButton" onclick="edit()">
 				EDIT
 			</button>
+      <button id="saveButton" onclick="save()">
+        SAVE
+      </button>
       <div id="content" contenteditable="false">
 				Enter content here.
 				<tangy-form>
