Add a publish button and show state in both save and publish buttons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <button id="saveButton" onclick="save()">
         SAVE
       </button>
+      <button id="publishButton" onclick="publish()">
+        PUBLISH 
+      </button>
 <div id="pageContent" contenteditable="false" style="position: relative;"><p>&nbsp;</p>
 <tangy-form>
 <div class="content">
